# CTDS

./: .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.MD  README.md  __init__.py  ctds_model_validation.ipynb  ctds_synthetic_recovery_validation.ipynb  exp1a_code_correctness.ipynb  exp1b_jax_benchmarks.ipynb  exp2a_parameter_recovery.ipynb  exp2b.ipynb  exp3_eirnn_equivalence.ipynb  exp4_initialization_quality.ipynb  exp5_weak_identifiability_ctds.ipynb  fit_ctds_on_simulated_data.ipynb  index.html  inference.py  init.py  init_testing.ipynb  mkdocs.yml  models.py  objects.inv  params.py  process_log.md  pyproject.toml  quickstart.py  setup.sh  simulation_utilis.py  sitemap.xml  test_NMF.py  test_blockwiseNMF.py  test_blockwise_nmf.ipynb  test_estimate_J.py  test_fit_em.py  test_inference.py  test_models.py  utlis.py
.github/workflows/: ci.yml  docs.yml  tests.yml
api/: index.html
changelog/: index.html
config/: ctds_config.yaml
contributing/: index.html
contributing/development/: index.html
ctds/: __init__.py  inference.py  models.py  params.py  simulation_utils.py  utils.py
ctds/evaluation/: __init__.py  metrics.py
data/: simulator.py
docs/: api.md  changelog.md  contributing.md  examples.md  index.md  installation.md  quickstart.md
docs/contributing/: development.md
docs/examples/: ctds_initialization_diagnostics.md  ctds_model_validation.md
docs/getting-started/: installation.md
docs/reference/: SUMMARY.md  ctds.md
docs/user-guide/: mathematical-framework.md
evaluation/: metrics.py  visualization.py
examples/: index.html
examples/ctds_initialization_diagnostics/: ctds_initialization_diagnostics.ipynb  index.html
examples/ctds_model_validation/: ctds_model_validation.ipynb  index.html
figures/exp1a_code_correctness/: cell_01_output.txt  cell_02_output.txt  cell_03_output.txt  cell_04_output.txt  cell_05_output.txt  cell_06_output.txt  cell_07_output.txt  cell_08_output.txt  cell_09_output.txt  cell_10_output.txt  cell_11_output.txt  cell_12_output.txt  cell_13_output.txt  cell_14_output.txt  cell_15_output.txt  cell_16_output.txt  cell_17_output.txt  cell_18_output.txt  cell_19_output.txt  cell_20_output.txt  cell_21_output.txt  cell_22_output.txt  cell_23_output.txt  cell_24_output.txt  cell_25_output.txt  cell_26_output.txt  cell_27_output.txt  cell_28_output.txt  cell_29_output.txt  cell_30_output.txt  cell_31_output.txt  cell_32_output.txt  cell_33_output.txt
gen_ref_pages/: gen_ref_pages.py  index.html
getting-started/installation/: index.html
installation/: index.html
models/: __init__.py  ctds_model.py
models/components/: __init__.py  constraints.py  ctds_dynamics.py  ctds_emissions.py  intialize.py
models/utils/: __init__.py  regression.py  simulator.py  visualization.py
notebooks/: exp0_benchmark.ipynb  exp0_ctds_model_validation.ipynb  exp1a_code_correctness.ipynb  exp1b_jax_benchmarks.ipynb  exp2_parameter_recovery.ipynb  exp3_eirnn_equivalence.ipynb  exp4_init_testing.ipynb  exp4_initialization_quality.ipynb  exp5_weak_identifiability_ctds.ipynb
quickstart/: index.html
reference/SUMMARY/: index.html
reference/ctds/: index.html
scripts/: run_experiment.py  run_synthetic.py
search/: search_index.json
src/ctds/: __init__.py  inference.py  models.py  simulation_utilis.py  utils.py
tests/: C_UPDATE_TESTS_SUMMARY.md  README.md  conftest.py  test_A_update.py  test_C_update.py  test_QR_update.py  test_em_convergence.py  test_fit_em.py  test_helpers.py  test_invariants.py  test_models.py  test_numerical_stability.py
tier3_cache/: exp33_results.pkl  exp34_phase.pkl  exp34_rank.pkl
training/: __init__.py  initialization.py  trainer.py
user-guide/mathematical-framework/: index.html
utils/: __init__.py  logger.py  matrix_utils.py  simulator.py  visualization.py
